<resources>
    <string name="app_name">Book Manager</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title" >BOOK MANAGER</string>
    <string name="nav_header_subtitle" >Best book management app</string>
    <string name="notify_empty_user">Trường bắt buộc</string>
    <string name="notify_empty_pass">Trường bắt buộc</string>
    <string name="notify_length_pass">Mật khẩu tối thiểu 6 kí tự</string>
    <string name="notify_empty_name">Mời nhập tên</string>
    <string name="notify_empty_sdt">Mời nhập số điện thoại</string>
    <string name="notify_empty_pass2">Nhập lại mật khẩu</string>
    <string name="notify_same_pass">Mật khẩu trùng</string>
    <string name="user_exits">Tên người dùng bị trùng</string>
    <string name="question_delete_user">Xác nhận xóa?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="user_not_exitst">Tài khoản không tồn tại</string>
    <string name="login">Vui lòng chờ</string>
    <string name="wrong_pass">Sai mật khẩu</string>
    <string name="title_user">Người Dùng</string>
    <string name="notify_same_sdt">Sai định dạng</string>
    <string name="cannot_delete_admin">Bạn không có quyền này!</string>
    <string name="admin">ADMIN</string>
    <string name="addUserName">Xin chào: </string>
    <string name="notify_empty_passold">Nhập mật khẩu cũ</string>
    <string name="notify_empty_passnew">Nhập mật khẩu mới</string>
    <string name="notify_empty_passnew2">Nhập lại mật khẩu mới</string>
    <string name="permision">Yêu cầu quyền Admin</string>
    <string name="change_pass_success">Đỗi mật khẩu mới: </string>
    <string name="change_pass_failed">Đổi mật khẩu thất bại!</string>
    <string name="failed">Thất bại!</string>
    <string name="deleted">Đã xóa: </string>
    <string name="editedUser">Đã cập nhật người dùng: </string>
    <string name="title_typebook">Thể Loại</string>
    <string name="notify_typebook_exists">Mã trùng!</string>
    <string name="notify_empty_IDTypeBook">Nhập mã thể loại</string>
    <string name="notify_empty_NameTypeBook">Nhập tên thể loại</string>
    <string name="notify_empty_Description">Nhập mô tả</string>
    <string name="notify_empty_Position">Chọn vị trí</string>
    <string name="add_successfully_typebook">Đã thêm: </string>
    <string name="add_failed_typebook">Thêm thất bại</string>
    <string name="deleted_failed">Xóa thất bại</string>
    <string name="editedTypeBook">Đã cập nhật:</string>
    <string name="title_book">Sách</string>
    <string name="notify_BookID_exists">Mã trùng</string>
    <string name="notify_empty_BookID">Nhập mã sách</string>
    <string name="notify_empty_BookName">Nhập tên sách</string>
    <string name="notify_empty_BookAuthor">Nhập tác giả</string>
    <string name="notify_empty_NXB">Nhập nhà xuất bản</string>
    <string name="notify_empty_BookPrice">Nhập giá sách</string>
    <string name="notify_empty_Quantity">Nhập số lượng sách</string>
    <string name="add_successfully_book">Đã thêm:</string>
    <string name="add_failed_book">Thêm sách thất bại</string>
    <string name="editedBook">Đã cập nhật:</string>
    <string name="edited_faied">Sửa thất bại</string>
    <string name="deleted_book">Đã xóa:</string>
    <string name="deleted_Genre">Đã xóa:</string>
    <string name="deleted_user">Đã xóa:</string>
    <string name="add_Genre">Thiếu mã thể loại</string>
    <string name="delete_message_book">Xác nhận xóa?</string>
    <string name="delete_message_genre">Xác nhận xóa?</string>
    <string name="bill">Hóa Đơn</string>
    <string name="title_top_book">Top 10 Sách Bán Chạy</string>
    <string name="back">Xác nhận thoát?</string>
    <string name="title_statistc">Thống Kê</string>
    <string name="delete_message_bill">Xác nhận xóa?</string>
    <string name="notify_max_bill_id">Tối đa 7 kí tự</string>
    <string name="pick_date">Mời chọn ngày</string>
    <string name="notify_empty_BillID">Nhập mã hóa đơn</string>
    <string name="notify_BillID_exists">Mã trùng!</string>
    <string name="add_failed_bill">Thêm hóa đơn thất bại</string>
    <string name="editedBill">Đã cập nhật:</string>
    <string name="addBill">Đã thêm:</string>
    <string name="delete_message_billdetail">Xác nhận xóa?</string>
    <string name="notify_BookID_not_exists">Mã sách không tồn tại</string>
    <string name="addBillDetail">Đã thêm</string>
    <string name="delete">Đã xóa</string>
    <string name="delete_billDetail">Vui lòng kiểm tra hóa đơn chi tiết</string>
    <string name="editedBill_Detail">Đã cập nhật</string>
    <string name="notify_Quantity">Số lượng sách: </string>
    <string name="delete_book_BillDetail">Vui lòng kiểm tra hóa đơn sách</string>
    <string name="deleted_genre">Vui lòng kiểm tra các đầu sách thuộc thể loại</string>
    <string name="notify_Quantity_equal_0">Vui lòng thêm số lượng</string>
    <string name="notify_length_user">Tối đa 50 kí tự</string>
    <string name="notify_length_pass2">Tối đa 50 kí tự</string>
    <string name="notify_length_name">Tối đa 50 kí tự</string>
    <string name="notify_length_genreID">Tối đa 5 kí tự</string>
    <string name="notify_length_Genre">TTối đa 50 kí tự</string>
    <string name="notify_length_Des">Tối đa 255 kí tự</string>
    <string name="notify_length_BookID">Tối đa 5 kí tự</string>
    <string name="notify_length_Author">Tối đa 50 kí tự</string>
    <string name="notify_length_NXB">Tối đa 50 kí tự</string>
    <string name="notify_length_BookName">Tối đa 50 kí tự</string>
    <string name="notify_Quantity_Old">Số lượng sách ít hơn hóa đơn chi tiết</string>
    <string name="billdetail_total">Thành tiền:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rePass">Lưu mật khẩu</string>
    <string name="login_">Đăng nhập</string>
    <string name="statistic_day">Ngày:</string>
    <string name="statistic_month">Tháng:</string>
    <string name="statistic_year">Năm:</string>
    <string name="addbill">Thêm hóa đơn</string>
    <string name="billID">Mã hóa đơn</string>
    <string name="pickdate">Chọn ngày</string>
    <string name="pick">Chọn</string>
    <string name="add">Thêm</string>
    <string name="cancel">Hủy</string>
    <string name="bookID">Mã sách</string>
    <string name="quantity">Số lượng</string>
    <string name="addbook">Thêm sách</string>
    <string name="bookName">Tựa sách</string>
    <string name="author">Tác giả</string>
    <string name="NXB">NXB</string>
    <string name="price">Giá</string>
    <string name="addGenre">Thêm thể loại</string>
    <string name="GenreId">Mã thể loại</string>
    <string name="GenreName">Tên thể loại</string>
    <string name="pos">Thứ tự</string>
    <string name="des">Mô tả</string>
    <string name="addUser">Thêm người dùng</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="pass_word2">Nhập lại mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="name">Họ tên</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="passOld">Mật khẩu cũ</string>
    <string name="passNew">Mật khẩu mới</string>
    <string name="passNew2">Nhập lại mật khẩu</string>
    <string name="change">Đổi</string>
    <string name="edit">Sửa</string>
    <string name="editBill">Sửa hóa đơn</string>
    <string name="editBook">Cập nhật sách</string>
    <string name="editTypeBook">Cập nhật thể loại</string>
    <string name="editUser">Cập nhật người dùng</string>
    <string name="user">Người dùng</string>
    <string name="Genre">Thể loại</string>
    <string name="book">Sách</string>
    <string name="bill_">Hóa đơn</string>
    <string name="book_selling">Sách bán chạy</string>
    <string name="statistic">Thống kê</string>
    <string name="search">Tìm</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="home">Trang chủ</string>
    <string name="about">Giới thiệu</string>
    <string name="logout">ĐĂNG XUẤT</string>
    <string name="quit">THOÁT</string>
</resources>
