<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:ignore="Overdraw">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/edBookName_dialog_editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bookName"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spnTypeBookID_dialog_editBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:id="@+id/edAuthor_dialog_editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="text"
            android:id="@+id/edNXB_dialog_editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NXB"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/edPrice_dialog_editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:id="@+id/edQuantity_dialog_editBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnEdit_dialog_editBook"
            android:textAllCaps="false"
            android:text="@string/edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_dialog_editBook"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>