<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="Overdraw">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/edTypeBookName_dialog_editGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/GenreName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="number"
            android:id="@+id/edPosition_dialog_editGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pos" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/edDescription_dialog_editGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnEdit_dialog_editGenre"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/edit"
            android:textAllCaps="false"/>

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_dialog_editGenre"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>