<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Overdraw">

    <android.support.design.widget.TextInputLayout
        app:counterMaxLength="7"
        app:counterEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:inputType="text"
        android:id="@+id/edBillID_dialogAddBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/billID"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:layout_marginEnd="10dp"
            android:textColor="#000000"
            android:id="@+id/tvDate"
            android:paddingStart="5dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/pickdate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/btnPickDate"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnAddBill_dialog_AddBill"
            android:textAllCaps="false"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel_dialog_AddBill"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>